--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   "repository": "https://github.com/StileDevs/grow-items.git",
   "scripts": {
     "test": "ava",
-    "build": "pnpm run build:ts",
+    "build": "pnpm run build:tsup",
     "build:ts": "rimraf dist && tsc",
+    "build:tsup": "rimraf dist && tsup",
     "docs": "rimraf docs && typedoc"
   },
   "keywords": [
@@ -44,6 +45,7 @@
     "@types/node": "^22.15.21",
     "ava": "^6.3.0",
     "rimraf": "^5.0.10",
+    "tsup": "^8.5.0",
     "tsx": "^4.19.4",
     "typedoc": "^0.28.5",
     "typescript": "^5.8.3"
