--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,8 +1,8 @@
-name: Build Code
+name: CI Pipeline
 on: [push, pull_request]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -13,3 +13,5 @@ jobs:
         run: pnpm i --frozen-lockfile --ignore-scripts
       - name: Build
         run: pnpm run build
+      - name: Run Tests
+        run: pnpm run test
