--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "description": "A standalone items.dat parser for Growtopia",
   "version": "1.0.0",
   "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "bun": "./dist/index.js",
-      "import": "./esm.mjs",
-      "require": "./dist/index.js"
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "default": "./dist/index.js"
     }
   },
   "ava": {
