--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   },
   "repository": "https://github.com/StileDevs/grow-items.git",
   "scripts": {
+    "test": "ava",
     "build": "pnpm run build:tsup",
     "build:ts": "rimraf dist && tsc",
     "build:tsup": "rimraf dist && tsup",
-    "docs": "rimraf docs && typedoc",
-    "test": "ava"
+    "docs": "rimraf docs && typedoc"
   },
   "keywords": [
     "growtopia",
