--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -85,3 +85,22 @@ jobs:
           fi
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: publish
+    if: github.ref == 'refs/heads/main'
+    steps:
+      - uses: actions/checkout@v4
+      - name: Create Release
+        id: create_release
+        run: |
+          VERSION=$(git log -1 --pretty=%B)
+          if echo "$VERSION" | grep -qE "^[0-9]+\.[0-9]+\.[0-9]+$"; then
+            gh release create "$VERSION" \
+              --title "$VERSION" \
+              --notes "Release version $VERSION" \
+              --target ${{ github.sha }}
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
