--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "keywords": [
     "growtopia",
     "items",
-    "parser"
+    "parser",
+    "data",
   ],
   "author": {
     "name": "StileDevs",
