--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,16 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "lib": ["ES2015", "ES2016", "ES2017", "ES2018", "ES2019", "ES2020", "ES2021", "ES2022"],
+    "lib": [
+      "ES2015",
+      "ES2016",
+      "ES2017",
+      "ES2018",
+      "ES2019",
+      "ES2020",
+      "ES2021",
+      "ES2022",
+    ],
     "module": "CommonJS",
     "target": "ES2022",
     "noFallthroughCasesInSwitch": true,
@@ -18,8 +27,8 @@
     "declaration": true,
     "noEmitOnError": false,
     "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
   },
   "exclude": ["node_modules/**/*", "src/**/*"],
-  "include": ["lib/**/*", "types/**/*"]
+  "include": ["lib/**/*", "types/**/*"],
 }
